# mixbench

./: .clang-format  .gitattributes  .gitignore  GTX_TITANX.txt  Makefile  README.md  lcutil.h  lhiputil.h  loclutil.h  main-cuda.cpp  main-hip-ro.cpp  main-hip.cpp  main-ocl.cpp  main.cpp  mix_kernels.cl  mix_kernels.cu  mix_kernels.h  mix_kernels_cuda.cu  mix_kernels_cuda.h  mix_kernels_cuda_ro.cu  mix_kernels_hip.cpp  mix_kernels_hip.h  mix_kernels_hip_ro.cpp  mix_kernels_ocl.cpp  mix_kernels_ocl.h  mix_kernels_ocl_ro.cpp  mix_kernels_ocl_ro.h  mix_kernels_ro.cl  query_version.sh  timestamp.h
include/: common.h
mixbench-cpu/: CMakeLists.txt  Dockerfile  README.md  main.cpp  mix_kernels_cpu.cpp  mix_kernels_cpu.h
mixbench-cuda/: CMakeLists.txt  README.md  lcutil.h  main-cuda.cpp  mix_kernels_cuda.cu
mixbench-hip/: CMakeLists.txt  README.md  lhiputil.h  main-hip-ro.cpp  main-hip.cpp  mix_kernels_hip.cpp  mix_kernels_hip.h  mix_kernels_hip_ro.cpp
mixbench-opencl/: CMakeLists.txt  README.md  check-half2-def.cpp  loclutil.h  main-ocl.cpp  mix_kernels.cl  mix_kernels_ocl.cpp  mix_kernels_ocl.h  mix_kernels_ocl_ro.cpp  mix_kernels_ro.cl
mixbench-sycl/: CMakeLists.txt  README.md  lsyclutil.h  main-sycl.cpp  mix_kernels_sycl.cpp  mix_kernels_sycl.h  mix_kernels_sycl_alt.cpp  mix_kernels_sycl_ro.cpp
results/: GTX480-bs.csv  GTX480-bs.txt  GTX480.csv  GTX480.txt  GTX660-bs.txt  GTX660.csv  GTX660.txt  TeslaK20c.csv  TeslaK20c.txt
results/CUDA/: GTX480-bs.txt  GTX480.txt  GTX660-bs.csv
results/HIP/: FIJI_NANO-ro.txt  FIJI_NANO.txt  GTX_TITANX-ro.txt
results/OpenCL/: Bonaire.csv
